--- a/templates/weibo_new.html
+++ b/templates/weibo_new.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>New</title>
+    <title>weibo new</title>
 </head>
 <body>
-<form action="/weibo/add" method="POST">
-    <input type="text" value="content" name="content">
-    <br>
-    <button type="submit">send</button>
-
-
-</form>
+    <form action="/weibo/add" method="post">
+        <input name="content">
+        <br>
+        <button type="submit">发表新微博</button>
+    </form>
 </body>
 </html>
