--- a/templates/weibo_index.html
+++ b/templates/weibo_index.html
@@ -15,8 +15,8 @@
     {% for w in weibos %}
     <p>
         {{ w.content }} from {{ user.username }}
-        <a href="/weibo/delete?id={{ w.id }}">删除</a>
-        <a href="/weibo/edit?id={{ w.id }}">修改</a>
+        <a href="/weibo/delete?id={}">删除</a>
+        <a href="/weibo/edit?id={}">修改</a>
         {% for c in w.comments() %}
         <div class="comment">
             {{ c.user().username }} : {{ c.content }}
